fix(account-sidebar): make folder and label names wrap elegantly. fixes T3402.
Summary:
WIP: changing the rest of items to make them look correct

fix last draft item in sidebar

add more padding

Test Plan: tested manually. all tests remain green.

Reviewers: evan, bengotow

Reviewed By: bengotow

Maniphest Tasks: T3402

Differential Revision: https://phab.nylas.com/D1943

--- a/internal_packages/account-sidebar/stylesheets/account-sidebar.less
+++ b/internal_packages/account-sidebar/stylesheets/account-sidebar.less
@@ -67,9 +67,7 @@
     font-weight: 400;
     padding: 0 @spacing-standard;
     line-height: @line-height-large * 1.1;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    clear: both;
 
     .unread {
       font-weight: @font-weight-medium;
@@ -77,11 +75,17 @@
       background: @source-list-active-color;
       margin-left:@padding-small-horizontal;
     }
+    .icon {
+      float: left;
+    }
     .name {
       text-transform: capitalize;
-      margin-left: @padding-xs-horizontal;
+      padding-left: @padding-small-horizontal;
       position:relative;
       top:1px;
+      overflow: hidden;
+      padding-top: @padding-small-vertical;
+      line-height: @line-height-small;
     }
     &.selected {
       background: @source-list-active-bg;
